gac_sb/objects/Recommandation_cross_selling__c.object
<CustomObject>
    <description>Recommandations Cross Selling</description>
    <fields>
        <fullName>Commentaires__c</fullName>
        <inlineHelpText>Informations utiles à la prise de rendez-vous pour le traitement de cette recommandation</inlineHelpText>
        <label>Commentaires</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compte__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compte</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Recommandations cross-selling</relationshipLabel>
        <relationshipName>Recommandations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Prospect</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Recommandations</relationshipLabel>
        <relationshipName>Recommandations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destinataire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Indiquez le collaborateur qui va se charger de traiter la recommandation</inlineHelpText>
        <label>Destinataire</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Recommandations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_mail_du_DCR__c</fullName>
        <label>E-mail du DCR</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>E_mail_du_DR__c</fullName>
        <label>E-mail du DR</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_du_destinataire__c</fullName>
        <label>Email du destinataire</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_du_proprietaire__c</fullName>
        <label>Email du propriétaire</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Motif_non_valide__c</fullName>
        <label>Motif non validé</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Non_Valide__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hors critère</fullName>
                </value>
                <value>
                    <fullName>Déjà client sur le produit concerné</fullName>
                </value>
                <value>
                    <fullName>Action commerciale déjà en cours</fullName>
                </value>
                <value>
                    <fullName>Recommandation sur le même produit</fullName>
                </value>
                <value>
                    <fullName>Contact non sensibilisé à la démarche</fullName>
                </value>
                <value>
                    <fullName>Reco obsolète</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nombre_recommandation__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre recommandation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Valide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Validé</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunities_creees__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indique si au moins une opportunité a été créée suite à cette recommandation</inlineHelpText>
        <label>Opportunité(s) créée(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Produits__c</fullName>
        <inlineHelpText>Produit sur lequel porte la recommandation</inlineHelpText>
        <label>Produit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>CIR</fullName>
                </value>
                <value>
                    <fullName>CIN</fullName>
                </value>
                <value>
                    <fullName>ACS</fullName>
                </value>
                <value>
                    <fullName>TAT</fullName>
                </value>
                <value>
                    <fullName>CRH</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>CFI</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Funding</fullName>
                </value>
                <value>
                    <fullName>R&amp;D Tax Credit</fullName>
                </value>
                <value>
                    <fullName>Autres</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profil_proprietaire__c</fullName>
        <label>Profil propriétaire</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tache_cree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tâche créée</label>
        <type>Checkbox</type>
    </fields>
    <label>Recommandation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Produits__c</columns>
        <columns>Destinataire__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Contact__c</columns>
        <columns>Profil_proprietaire__c</columns>
        <columns>Motif_non_valide__c</columns>
        <columns>Non_Valide__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Produits__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recommandation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommandations</pluralLabel>
    <recordTypes>
        <fullName>ES_Recommandation</fullName>
        <active>true</active>
        <label>ES Recommandation</label>
    </recordTypes>
    <recordTypes>
        <fullName>FR_Recommandation</fullName>
        <active>true</active>
        <label>FR Recommandation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Motif_non_valide_obligatoire_si_coche</fullName>
        <active>true</active>
        <description>Motif non validé obligatoire si coché</description>
        <errorConditionFormula>(Non_Valide__c  = true &amp;&amp; 
ISPICKVAL(Motif_non_valide__c,&quot;&quot;))</errorConditionFormula>
        <errorMessage>Le champ &quot; Motif non validé &quot; doit obligatoirement être renseigné si la case &quot; Non validé &quot; est cochée.</errorMessage>
    </validationRules>
</CustomObject>